# tts_sys

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.Bob/: mcp.json
database/: tts_sys.db
docs/: ADDING_NEW_ENGINE.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  FALLBACK_STRATEGY.md  TEST_COVERAGE.md  TROUBLESHOOTING.md
examples/: fallback_demo.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: quickstart.py
tests/: conftest.py  test_api.py  test_api_advanced.py  test_audio_processor.py  test_cache_manager.py  test_engine_manager.py  test_engines.py  test_fallback.py  test_utils.py
